feat: сверстать profile

--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
     <div class="page__container">
         <header class="header">
             <img class="header__logo" src="images/mesto-logo.svg" alt="логотип Mesto Russia">
-
         </header>
+        <main>
+            <section class="profile" aria-label="профиль">
+                <div class="profile__info-container">
+                    <img class="profile__avatar" src="/images/Avatar-Custo.png" alt="Жан Жак Кусто">
+                    <div class="profile__info">
+                        <h1 class="profile__name">Жак-Ив Кусто</h1>
+                        <div class="profile__edit-button">
+                        </div>
+                        <h1 class="profile__job">Исследователь океана</h1>
+                    </div>
+
+                </div>
+                <div class="profile__add-button"></div>
+
+            </section>
+
+        </main>
     </div>
 </body>
 
