--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>проект Mesto</title>
-  <link rel="stylesheet" href="/pages/index.css">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 
 <body class="page" aria-label="проект Место">
@@ -28,7 +28,7 @@
     <main>
       <section class="profile" aria-label="профиль">
         <div class="profile__info-container">
-          <img class="profile__avatar" src="/images/Avatar-Custo.png" alt="Жан Жак Кусто">
+          <img class="profile__avatar" src="images/Avatar-Custo.png" alt="Жан Жак Кусто">
           <div class="profile__info">
             <h1 class="profile__name">Жак-Ив&nbsp;Кусто</h1>
             <div class="profile__edit-button">
@@ -40,42 +40,42 @@
       </section>
       <section class="elements" aria-label="карточки">
         <article class="element">
-          <img class="element__image" src="/images/Karachaevsk.jpg" alt="Карачаевск">
+          <img class="element__image" src="images/Karachaevsk.jpg" alt="Карачаевск">
           <div class="element__description">
             <h2 class="element__name">Карачаевск</h2>
             <div class="element__heart-icon"></div>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="/images/Elbrus.jpg" alt="Эльбрус">
+          <img class="element__image" src="images/Elbrus.jpg" alt="Эльбрус">
           <div class="element__description">
             <h2 class="element__name">Гора Эльбрус</h2>
             <div class="element__heart-icon"></div>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="/images/Dombai.jpg" alt="Домбай">
+          <img class="element__image" src="images/Dombai.jpg" alt="Домбай">
           <div class="element__description">
             <h2 class="element__name">Домбай</h2>
             <div class="element__heart-icon"></div>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="/images/Elbrus.jpg" alt="Эльбрус">
+          <img class="element__image" src="images/Elbrus.jpg" alt="Эльбрус">
           <div class="element__description">
             <h2 class="element__name">Гора Эльбрус</h2>
             <div class="element__heart-icon"></div>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="/images/Dombai.jpg" alt="Домбай">
+          <img class="element__image" src="images/Dombai.jpg" alt="Домбай">
           <div class="element__description">
             <h2 class="element__name">Домбай</h2>
             <div class="element__heart-icon"></div>
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="/images/Karachaevsk.jpg" alt="Карачаевск">
+          <img class="element__image" src="images/Karachaevsk.jpg" alt="Карачаевск">
           <div class="element__description">
             <h2 class="element__name">Карачаево-Черкессия</h2>
             <div class="element__heart-icon"></div>
@@ -87,7 +87,7 @@
       <p class="footer__text">© 2020 Mesto Russia</p>
     </footer>
   </div>
-  <script src="/scripts/index.js"></script>
+  <script src="scripts/index.js"></script>
 </body>
 
 </html>
