hotfix: fix placeholder.jpg

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="popup-gallery__container">
       <div class="popup__close-button popup-gallery__close-button">
       </div>
-      <img class="popup-gallery__image" src="placeholder" alt="">
+      <img class="popup-gallery__image" src="images/placeholder.jpg" alt="">
       <p class="popup-gallery__caption"></p>
     </div>
   </div>
