fix placeholder at line 74

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <template id="card-template">
     <article class="element">
-      <img class="element__image" src="" alt="">
+      <img class="element__image" src="images/placeholder.jpg" alt="">
       <button class="element__delete-button" type="button">
         <div class="element__delete-icon"></div>
       </button>
