feat: close popup by esc and overlay

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="page" aria-label="проект Место">
 
   <!-- попап редактирования юзера -->
-  <div class="popup popup_edit">
+  <div class="popup popup_edit" tabindex="-1">
     <div class="popup__container">
       <h3 class=" popup__heading">Редактировать профиль</h3>
       <form class="popup__form popup__form_edit" name="edit-form" novalidate>
@@ -33,7 +33,7 @@
     </div>
   </div>
   <!-- попап добавления места -->
-  <div class="popup popup_add">
+  <div class="popup popup_add" tabindex="-1">
     <div class="popup__container">
       <h3 class=" popup__heading">Новое место</h3>
       <form class="popup__form popup__form_add" name="add-form" novalidate>
@@ -55,7 +55,7 @@
     </div>
   </div>
   <!-- попап галереи -->
-  <div class="popup popup-gallery">
+  <div class="popup popup-gallery" tabindex="-1">
     <div class="popup-gallery__container">
       <div class="popup__close-button popup-gallery__close-button">
       </div>
