--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- main comment -->
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -21,7 +20,7 @@
             maxlength="40" required>
           <span class="popup__error input-name-error"></span>
         </label>
-        <label for="input-name" class="popup__form-label">
+        <label for="input-job" class="popup__form-label">
           <input class="popup__input popup__input_job" type="text" name="input-job" id="input-job" required
             minlength="2" maxlength="200">
           <span class="popup__error input-job-error"></span>
@@ -37,13 +36,13 @@
     <div class="popup__container">
       <h3 class=" popup__heading">Новое место</h3>
       <form class="popup__form popup__form_add" name="add-form" novalidate>
-        <label for="input-name" class="popup__form-label">
+        <label for="input-title" class="popup__form-label">
           <input class="popup__input popup__input_title" type="text" name="input-title" id="input-title"
             placeholder="Название" required minlength="2" maxlength="30">
           <span class="popup__error input-title-error"></span>
         </label>
 
-        <label for="input-name" class="popup__form-label">
+        <label for="input-link" class="popup__form-label">
           <input class="popup__input popup__input_link" type="url" name="input-link" id="input-link"
             placeholder="Ссылка на картинку" required>
           <span class="popup__error input-link-error"></span>
