--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
     </article>
   </template>
 
-  <script src="scripts/validate.js"></script>
-  <script src="scripts/index.js"></script>
+  <script type="module" src="scripts/index.js"></script>
 </body>
 
 </html>
