refactor Section, Popup classes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </article>
   </template>
 
-  <script type="module" src="scripts/index.js"></script>
+  <script type="module" src="pages/index.js"></script>
 </body>
 
 </html>
