--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       <h3 class=" popup__heading">Редактировать профиль</h3>
       <form class="popup__form popup__form_edit" name="edit-form" novalidate>
         <label for="input-name" class="popup__form-label">
-          <input class="popup__input popup__input_name" type="text" name="input-name" id="input-name" minlength="2"
+          <input class="popup__input popup__input_name" type="text" name="name" id="input-name" minlength="2"
             maxlength="40" required>
           <span class="popup__error input-name-error"></span>
         </label>
         <label for="input-job" class="popup__form-label">
-          <input class="popup__input popup__input_job" type="text" name="input-job" id="input-job" required
-            minlength="2" maxlength="200">
+          <input class="popup__input popup__input_job" type="text" name="job" id="input-job" required minlength="2"
+            maxlength="200">
           <span class="popup__error input-job-error"></span>
         </label>
 
@@ -62,13 +62,13 @@
       <h3 class=" popup__heading">Новое место</h3>
       <form class="popup__form popup__form_add" name="add-form" novalidate>
         <label for="input-title" class="popup__form-label">
-          <input class="popup__input popup__input_title" type="text" name="input-title" id="input-title"
+          <input class="popup__input popup__input_title" type="text" name="title" id="input-title"
             placeholder="Название" required minlength="2" maxlength="30">
           <span class="popup__error input-title-error"></span>
         </label>
 
         <label for="input-link" class="popup__form-label">
-          <input class="popup__input popup__input_link" type="url" name="input-link" id="input-link"
+          <input class="popup__input popup__input_link" type="url" name="link" id="input-link"
             placeholder="Ссылка на картинку" required>
           <span class="popup__error input-link-error"></span>
         </label>
