fix img src tag

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <section class="profile" aria-label="профиль">
         <div class="profile__info-container">
           <div class="profile__avatar-container">
-            <img class="profile__avatar" src="" alt="">
+            <img class="profile__avatar" src="<%=require('./images/placeholder.jpg')%>" alt="">
           </div>
           <div class="profile__info">
             <h1 class="profile__name"></h1>
